--- a/Site(HTML,CSS,Bootstrap,PHP)/css/main.css
+++ b/Site(HTML,CSS,Bootstrap,PHP)/css/main.css
@@ -32,12 +32,6 @@ a{
     height: 450px;
 }
 
-.glinf {
-	background-color:  #333;
-	padding-bottom: 10px;
-	margin-top: -15px;
-}
-
 .col-md-6{
 	padding-bottom: 10px;
 	padding-right: 10px;
@@ -55,15 +49,23 @@ a{
 	margin-left:15px;
 }
 
-.imgzab {
+.img-zab {
 	margin-bottom: 5px;
+	width: 85%;
+	height: 250px;
 }
 
-#glinf { 
+.advertisement-line{
+	background-color:  #333;
+	padding-bottom: 10px;
+	margin-top: -15px;
+}
+
+.advertisement-article { 
 	color: #D3D3D3;
 }
 
-#h444 { 
+.products-article { 
 	padding-right:70px;
 }
 
